ingress-restapi.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: "cookie"
#    nginx.ingress.kubernetes.io/session-cookie-name: "ingress-cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-expires: "600"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "600"
#    certmanager.k8s.io/issuer: "iconverse-letsencrypt"
#    certmanager.k8s.io/acme-challenge-type: http01
#    kubernetes.io/tls-acme: 'true'
  labels:
    app: ingress
spec:
#  tls:
#  - hosts:
#    - iconverse-k8s.taiger.io
#    secretName: iconverse-k8s.tls
  rules:  
    - host:
      http: 
        paths:
          - path: /restapi
            backend:
#              serviceName: svc-restapi-ingress
              serviceName: svc-restapi
              servicePort: 8080
          - path: //restapi
            backend:
#              serviceName: svc-restapi-ingress
              serviceName: svc-restapi
              servicePort: 8080
          - path: /restapi/*
            backend:
#              serviceName: svc-restapi-ingress
              serviceName: svc-restapi
              servicePort: 8080
          - path: //restapi/*
            backend:
#              serviceName: svc-restapi-ingress
              serviceName: svc-restapi
              servicePort: 8080
          - path: /kibana
            backend:
#              serviceName: svc-kibana-ingress
              serviceName: svc-kibana
              servicePort: 8080
          - path: //kibana
            backend:
#              serviceName: svc-kibana-ingress
              serviceName: svc-kibana
              servicePort: 8080
          - path: /kibana/*
            backend:
#              serviceName: svc-kibana-ingress
              serviceName: svc-kibana
              servicePort: 8080
